--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,9 @@
 {
   "pages": [
+    "pages/home/home",
     "pages/login/login",
+    
+    "pages/my/my",
     "pages/index/index",
     "pages/userConsole/userConsole",
     "pages/storageConsole/storageConsole",
@@ -23,5 +26,19 @@
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
-  "style": "v2"
+  "style": "v2",
+  "tabBar": {
+    "backgroundColor": "FFFFFF",
+    "list": [{
+      "pagePath": "pages/home/home",
+      "text": "首页",
+      "iconPath": "images/home_unselected.png",
+      "selectedIconPath": "images/home_selected.png"
+    },{
+      "pagePath": "pages/my/my",
+      "text": "我的",
+      "iconPath": "images/my_unselected.png",
+      "selectedIconPath": "images/my_selected.png"
+    }]
+  }
 }
