--- a/project.config.json
+++ b/project.config.json
@@ -35,7 +35,8 @@
     "userConfirmedBundleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
-    "minifyWXSS": true
+    "minifyWXSS": true,
+    "miniprogramRoot": "./miniprogram"
   },
   "appid": "wx83987e6ef718a891",
   "projectname": "miniprogram-1",
