--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,23 +2,11 @@
   "pages": [
     "pages/login/login",
     "pages/my/my",
-    "pages/index/index",
     "pages/home/home",
     "pages/organization/organization",
     "pages/organization/announcement/announcement",
     "pages/organization/member/member",
-    "pages/userConsole/userConsole",
-    "pages/storageConsole/storageConsole",
-    "pages/databaseGuide/databaseGuide",
-    "pages/addFunction/addFunction",
-    "pages/deployFunctions/deployFunctions",
-    "pages/chooseLib/chooseLib",
-    "pages/openapi/openapi",
-    "pages/openapi/serverapi/serverapi",
-    "pages/openapi/callback/callback",
-    "pages/openapi/cloudid/cloudid",
-    "pages/im/im",
-    "pages/im/room/room"
+    "pages/room/room"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
