登录界面云开发完成

--- a/project.config.json
+++ b/project.config.json
@@ -35,8 +35,7 @@
     "userConfirmedBundleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
-    "minifyWXSS": true,
-    "miniprogramRoot": "./miniprogram"
+    "minifyWXSS": true
   },
   "appid": "wx83987e6ef718a891",
   "projectname": "miniprogram-1",
