--- a/cloudfunctions/get-organization-info/package.json
+++ b/cloudfunctions/get-organization-info/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "get-student-info",
+  "name": "get-organization-info",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
