新建组织、新建公告页面UI

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,10 +1,13 @@
 {
   "pages": [
+    "pages/organization/announcement/create_announcement",
     "pages/login/login",
+    "pages/create_organization/create_organization",
     "pages/my/my",
     "pages/home/home",
     "pages/organization/organization",
     "pages/organization/announcement/announcement",
+    
     "pages/organization/member/member",
     "pages/room/room"
   ],
