--- a/cloudfunctions/add-organization-announcement/package.json
+++ b/cloudfunctions/add-organization-announcement/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openapi",
+  "name": "add-organization-announcement",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
